# QueueLauncher

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  QueueLauncher.sln  README.md
QueueLauncher/: QueueLauncher.vcxproj  QueueLauncher.vcxproj.filters
QueueLauncher/gui/: QueueLauncher.ui
QueueLauncher/include/: Constants.h  ErrorMessages.h  Exceptions.h  Queries.h  QueueLauncher.h  Utilities.h
QueueLauncher/rsrc/: QueueLauncher.qrc
QueueLauncher/src/: Main.cpp  QueueLauncher.cpp  Utilities.cpp
include/: Constants.h  ErrorMessages.h  Exceptions.h  Queries.h  QueueLauncher.h  Utilities.h
src/: Main.cpp  QueueLauncher.cpp  Utilities.cpp
ui/: QueueLauncher.ui
